--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <div class="u-container-style u-grey-10 u-group u-group-1">
                     <div class="u-container-layout u-container-layout-3">
-                        <a class="u-button-style u-nav-link" href="mailto:thuvu354@gmail.com"><span class="u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-1" data-href="mailto:thuvu354@gmail.com"><img src="images/542689.png" alt=""></span></a>
-                        <a class="u-button-style u-nav-link" href="https://www.linkedin.com/in/thuavu/"></a><span class="u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-2" data-href="https://www.linkedin.com/in/thuavu/"><img src="images/1384014.png" alt=""></span></a>
-                        <a class="u-button-style u-nav-link" href="https://github.com/thuavu"></a><span class="u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-3" data-href="https://github.com/thuavu"><img src="images/733609.png" alt=""></span></a>
+                        <a href="mailto:thuvu354@gmail.com"><span class="u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-1" data-href="mailto:thuvu354@gmail.com"><img src="images/542689.png" alt=""></span></a>
+                        <a href="https://www.linkedin.com/in/thuavu/"><span class="u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-2" data-href="https://www.linkedin.com/in/thuavu/"><img src="images/1384014.png" alt=""></span></a>
+                        <a href="https://github.com/thuavu"><span class="u-file-icon u-icon u-icon-circle u-palette-1-base u-icon-3" data-href="https://github.com/thuavu"><img src="images/733609.png" alt=""></span></a>
                     </div>
                   </div>
                 </div>
