Changed "png" to "PNG"

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-6 order-sm-1">
-                                <img class="carosel-img" src="images/lost-in-halloween2.png">
-                                <img class="carosel-img" src="images/lost-in-halloween4.png">
+                                <img class="carosel-img" src="images/lost-in-halloween2.PNG">
+                                <img class="carosel-img" src="images/lost-in-halloween4.PNG">
                             </div>
 
                             <div class="col-sm-5 order-sm-2 carosel-text">
