Update about section and tweak stylesheet

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
     <section class="hidden" id="about">
         <h2>About Me.</h2>
-        <p>My name is Thu and I always have had a fascination with seeing stories unfold. This led me to an interest in bringing stories to life with art then to being a freelance artist starting from 2014. Eventually, I learned I could bring stories to life through coding and eventually found that I could do the same with AR and VR technology!</p>
+        <p>My name is Thu and I graduated with a B.S. in Computer Science from the University of Texas at Dallas in Spring 2022.</p>
+        <p>I always have had a fascination with seeing stories unfold. This led to my interest in bringing stories to life with art to becoming a freelance artist starting in 2014. Eventually, I learned I could bring stories to life through coding, which I later found that I could do the same with AR and VR technology!</p>
     </section>
 
     <section class="hidden" id="skills">
