--- a/index.html
+++ b/index.html
@@ -277,6 +277,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 work-right-text">
+                    <h3>Game Developer Intern</h3><br>
+                    <h4>InOrbit Systems</h4>
+                    <h4>October 2022 - present</h4>
+                </div>
+                <div class="col-sm-6 work-left-text">
+                    <p> 
+                        <ul>
+                            <li>Developed an MMORPG game with C++ and Unreal Engine 5.</li>
+                            <li>Improved game design, documentation, UI design, story writing, game lore building, and 3D modeling skills.</li>
+                            <li>Developed project management skills as a team lead with a team of 14 in an iterative agile workflow.</li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-6 work-right-text">
                     <h3>AMP Assistant Art Director</h3><br>
                     <h4>The University of Texas at Dallas</h4>
                     <h4>January 2022 - May 2022</h4>
