Updated index.html work section

--- a/index.html
+++ b/index.html
@@ -277,9 +277,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 work-right-text">
+                    <h3>Immersive Software Developer</h3><br>
+                    <h4>Booz Allen Hamilton</h4>
+                    <h4>April 2023 - Present</h4>
+                </div>
+                <div class="col-sm-6 work-left-text">
+                    <p> 
+                        <ul>
+                            <li>Developed and created VR applications with Unity and C# successfully for clients.</li>
+                            <li>Icreased effective interdeparment communication with both small and large teams ranging from a size of 5 to 12.</li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 work-right-text">
                     <h3>Game Developer Intern</h3><br>
                     <h4>InOrbit Systems</h4>
-                    <h4>October 2022 - present</h4>
+                    <h4>October 2022 - December 2023</h4>
                 </div>
                 <div class="col-sm-6 work-left-text">
                     <p> 
